{{$NEXT}}

0.005  2017-02-26 19:57:22 CET
   - add handling of keyboards with automatic value translation

0.004  2016-12-06 06:26:28 CET
   - use warnings everywhere

0.002001  2016-11-12 16:54:04 CET
   - add missing dependency on Mock::Quick
   - tracking project via Travis-CI (.travis.yml)
   - badges!

0.002  2016-11-11 23:20:43 CET
   - first release on CPAN (CPAN Testers seems out these days...)