@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - add keyboard id handling
 
 0.005  2017-02-26 19:57:22 CET
    - add handling of keyboards with automatic value translation
